--- a/SharpDB_ConsoleApp/config/db.config
+++ b/SharpDB_ConsoleApp/config/db.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <connectionStrings>
-  <add name="MsSql" connectionString="Data Source=JGS\TAKETRY;password=123456;Initial Catalog=QTP2008;User ID=sa" />
+  <!--<add name="MsSql" connectionString="Data Source=JGS\TAKETRY;password=123456;Initial Catalog=QTP2008;User ID=sa" />-->
+  <add name="MsSql" connectionString="data source=10.1.19.189\MSSQLSERVER1;uid=aiws;pwd=aiws;database=AIWS" />
   <add name="MySql" connectionString="Server=localhost;Database=clientcenter;User=root; Password=123456;" />
   <add name="Oracle" connectionString="Data Source=jgs/bmtlims;Persist Security Info=True;User ID=sysman;Password=000000;Unicode=True" />
   <add name="OracleDDTek" connectionString="Host=jgs;Port=1521;User ID=sysman;Password=000000;Service Name=bmtlims" />
