--- a/SharpDB_ConsoleApp/SharpDB_ConsoleApp.csproj
+++ b/SharpDB_ConsoleApp/SharpDB_ConsoleApp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="PageUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="dll\DDTek.Oracle.dll" />
